Fix: dynamic sort fields, case-insensitive sortBy, CSRF docs, secure JWT key lifecycle, constructor injection